fix the width for the overflowing div by uding width:auto;

--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ ol, ul {
         padding-bottom: 2rem;
         padding-top: 0;
         margin-top: 0;
+        width: auto;
         
     }
 }
